# c_analysis

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
app/: __init__.py  dashboard.py  hybrid_search.py
data/: emerging_hierarchy.json  emerging_topics.json  manifest.json  narrative_emerging.json  pipeline_status.json  taxonomy.yaml
docs/: METHODOLOGY.md  TAXONOMY_REDRESS.md
scripts/: __init__.py  download_cfpb.py  emerging_topics.py  narrative_topics.py  risk_signals.py  run_all.py  standardize_taxonomy.py
tests/: __init__.py  test_download_cfpb.py  test_emerging_topics.py  test_taxonomy_paths.py
